# meson_test

calculator/: .gitignore  CMakeLists.txt  Kconfig  README.md  build.sh  meson.build
calculator/configs/algos/: algos.mak
calculator/scripts/: minikconf.py
calculator/src/: meson.build
calculator/src/app/: calculator.c  meson.build
calculator/src/lib/: Kconfig  meson.build
calculator/src/lib/add/: Kconfig  meson.build
calculator/src/lib/algos/inc/: algorithm.h
calculator/src/lib/algos/src/: Kconfig  algos.c  meson.build
calculator/src/lib/algos/src/add/: Kconfig  add.c  meson.build
calculator/src/lib/algos/src/sub/: Kconfig  meson.build  sub.c
calculator/src/lib/sub/: Kconfig  meson.build
